# compiler-assignment

./: .gitignore  CMakeLists.txt  Makefile  [Compiler]project_2_result_20171634.tex  [Compiler]project_3_result_16.tex  analyze.c  analyze.h  callgrind.out.5130  cgen.c  cgen.h  code.c  code.h  coverage.jl  globals.h  lex.l  lex.yy.c  lex.yy.h  license.txt  main.c  parser.output  parser.tab.c  parser.tab.h  parser.y  project3_16  readme.txt  report  report.tex  scan.c  scan.h  symtab.c  symtab.h  tiny.l  util.c  util.h  utils.c
presentation#3/: bredelebeamer.cls  master.nav  master.tex  master.toc  master.vrb
presentation#3/_minted-master/: 040D7816DB2B97B89259CE4FE10D449F96115CE49B70863A21A5E9894C623D52.pygtex  15F2AB22462A9620C7BACD7C82A64CE896115CE49B70863A21A5E9894C623D52.pygtex  5DFD35E209E1ED5F1D0C18F7A6AF66F196115CE49B70863A21A5E9894C623D52.pygtex  A2FC7B5FF9B9ABC73878FCE2D880448196115CE49B70863A21A5E9894C623D52.pygtex  DF4634A0ECD1C77EE62C9E67241867CB96115CE49B70863A21A5E9894C623D52.pygtex  murphy.pygstyle
presentation#3/figure/: onepass.csv  performance.vsz  twopass.csv
report#3/: [Compiler]project_3_result_16.tex  master.pyg  master.tex  master.tex~
report#3/_minted-master/: 38ED1A68E4B6221EE4A08180C3B2F77B96115CE49B70863A21A5E9894C623D52.pygtex  56C7013404BE1404145CAD8DF7F2684D96115CE49B70863A21A5E9894C623D52.pygtex  6B8EE29D374B29C52FE53B56A687A5119751F7FECD79D2659561DF9BF9314BCD.pygtex  (+3 more)
report#4/: master.tex
test_files/: error.c  error1.c  error10.c  error11.c  error13.c  error14.c  error15.c  error16.c  error17.c  error2.c  error3.c  error4.c  error5.c  error6.c  error7.c  error8.c  error9.c  errorfree.c  tes.asm  test.asm  test.c  test.tny  test1.asm  test1.c  test1.tm  test1.tny  test2.asm  test2.c  test2.tm  test2.tny  test3.asm  test3.c  test3.tm  test3.tny  test4.asm  test4.c  test4.tm  test4.tny  test5.asm  test5.c  (+7 more)
